# docs/yaml/openapi.yaml
@@ -17,14 +17,6 @@ tags:
     description: API endpoints for user login/logout.
   - name: Users
     description: API endpoints for user management.
-  - name: Breeds
-    description: Access and view breeds of the dog
-  - name: pets
-    description: API endpoints for dog management.
-  - name: Favourites
-    description: API endpoints for favourites view and like/unlike.
-  - name: Comments
-    description: API endpoints for guest and staff comment for the dog.
 paths:
   /auth:
     post:
@@ -86,27 +78,7 @@ paths:
     $ref: "./userGoogle.yaml"    
   /users/p/{id}:
     $ref: "./userPwd.yaml" 
-  /breeds:
-    $ref: "./breeds.yaml"
-  /breeds/{id}:
-    $ref: "./breed.yaml"
-  /pets:
-    $ref: "./pets.yaml"
-  /pets/{filter}:
-    $ref: "./dogFilter.yaml"
-  /pets/{id}:
-    $ref: "./dog.yaml"
-  /pets/image/{id}:
-    $ref: "./dogImage.yaml"
-  /favourites/{filter}:
-    $ref: "./favourites.yaml"
-  /favourites/{dogId}/{isFavourite}:
-    $ref: "./favourite.yaml"
-  /comments/{dogId}:
-    $ref: "./comments.yaml"
-  /comments:
-    $ref: "./comment.yaml"
-  
+
 
 
 # router.post('/',passport.authenticate(['basic'],{session:false}), signin)
